[package]
name = "tke"
version = "0.1.0" 
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = "0.19.3"
time = "0.3.14"
js-sys = "0.3.46"
web-sys = { version = "0.3.6", features = ["Event","EventTarget","InputEvent", "HtmlSelectElement", "HtmlTextAreaElement"] }
wasm-bindgen = "0.2"
serde = "*"
serde_json = "*"